Removed ImageStructure as a concept. Too early for version 1, maybe in a future version.